Now persists built towers; add some more buttons to the GUI for testing purposes (clear towers, (un-)select towers)

--- a/prototypes/map+interface/index.html
+++ b/prototypes/map+interface/index.html
@@ -22,6 +22,9 @@
 <body>
 <div>
 <button id="btn-spawn">Spawn</button>
+<button id="btn-clear-towers">Clear all towers</button>
+<button id="btn-select-tower">Select a tower</button>
+<button id="btn-unselect-tower">Unselect a tower</button>
 </div>
 
 </body>
